k8s-resource-manifests/knowledge-db/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledge-db
  namespace: sodalite-services
spec:
  selector:
    matchLabels:
      app: knowledge-db
  replicas: 1
  template:
    metadata:
      labels:
        app: knowledge-db
    spec:
      containers:
      - image: sodaliteh2020/graph_db:192
        name: knowledge-db
        ports:
        - containerPort: 7200
          protocol: TCP
