k8s-resource-manifests/knowledge-db/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: knowledge-db
  namespace: sodalite-services
spec:
  selector:
    matchLabels:
      app: knowledge-db
  serviceName: knowledge-db
  replicas: 1
  template:
    metadata:
      labels:
        app: knowledge-db
    spec:
      containers:
      - image: sodaliteh2020/graph_db:latest
        imagePullPolicy: Always
        # command: [ 'sh', '-c', '
        # set -x;
        # apk update;
        # apk add java-cacerts;
        # /opt/graphdb/dist/bin/graphdb -Dgraphdb.home=/opt/graphdb/home -Ddefault.min.distinct.threshold=10485760 -Djava.security.egd=file:/dev/./urandom -Xmx10G -Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts
        # ']
        # command: [ 
        #   "/opt/graphdb/dist/bin/graphdb",
        #   "-Dgraphdb.home=/opt/graphdb/home", 
        #   "-Ddefault.min.distinct.threshold=10485760", 
        #   "-Djava.security.egd=file:/dev/./urandom",
        #   "-Xmx10G",
          # "-Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts" ]
        args: 
        name: knowledge-db
        ports:
        - containerPort: 7200
          protocol: TCP
        resources:
          limits:
            cpu: "3"
            memory: "3G"
          requests:
            cpu: "2"
            memory: "1G"
        volumeMounts:
        - mountPath: /etc/ssl/certs/java/
          name: cacerts
        - mountPath: "/opt/graphdb/home"
          name: knowledge-db-home
      volumes:
      - name: cacerts
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: knowledge-db-home
      namespace: sodalite-services
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 5Gi
